fix: SearchBox placeholder capitalization on input

--- a/src/components/SearchBox/searchBox.module.css
+++ b/src/components/SearchBox/searchBox.module.css
@@ -29,5 +29,5 @@
     outline: none;
     border-bottom: 0.1rem solid var(--pure-white);
     caret-color: var(--red);
-
+    text-transform: capitalize;
 }
