--- a/src/components/GridLayout/gridlayout.module.css
+++ b/src/components/GridLayout/gridlayout.module.css
@@ -6,12 +6,9 @@
 
 .gridContainer {
     display: grid;
-    width: 121.4rem;
-    height: max-content;
     margin-bottom: 10rem;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr);
-    grid-column-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+    grid-column-gap: 1.2rem;
     grid-row-gap: 9rem;
 }
 
