--- a/src/components/GridLayout/gridlayout.module.css
+++ b/src/components/GridLayout/gridlayout.module.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
+    width: 97vw;
 }
 
 .gridContainer {
     display: grid;
     margin-bottom: 10rem;
     grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
-    grid-column-gap: 1.2rem;
     grid-row-gap: 9rem;
 }
 
