--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -3,3 +3,12 @@
     position: relative;
     margin-left: 13.2rem;
 }
+
+@media only screen and (max-width:810px) {
+
+    .container {
+        margin-left: 3rem;
+        margin-top: 3.3rem;
+    }
+
+}
