--- a/src/components/GridLayout/gridlayout.module.css
+++ b/src/components/GridLayout/gridlayout.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
-    width: 97vw;
+    width: 90vw;
 }
 
 .gridContainer {
@@ -10,6 +10,7 @@
     margin-bottom: 10rem;
     grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
     grid-row-gap: 9rem;
+    place-items: center;
 }
 
 .title {
