--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -60,6 +60,7 @@
         justify-content: center;
         align-content: center;
         column-gap: 3.2rem;
+        transition: 0.7s;
     }
 
     .logo {
